Source/Backend/deploy/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: sh360
    component: frontend
  name: sh360-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    ingress.kubernetes.io/ssl-redirect: "false"  
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  
spec:
  rules:
  - host: sh360.1f5a621cb1da4697a937.eastus.aksapp.io
    http:
      paths:
      - path: /hotels-api
        backend:
          serviceName: hotels
          servicePort: 80
      - path: /bookings-api
        backend:
          serviceName: bookings
          servicePort: 80
      - path: /suggestions-api
        backend:
          serviceName: suggestions
          servicePort: 80
      - path: /configuration-api 
        backend:
          serviceName: config
          servicePort: 80          
      - path: /tasks-api
        backend:
          serviceName: tasks
          servicePort: 80
      - path: /notifications-api
        backend:
          serviceName: notifications
          servicePort: 80          
      - path: /reviews-api
        backend:
          serviceName: reviews
          servicePort: 80
      - path: /discounts-api
        backend:
          serviceName: discounts
          servicePort: 80
      - path: /profiles-api
        backend:
          serviceName: profiles
          servicePort: 80                            
#  tls:
#  - secretName: mysh360-cert-tls
#    hosts: 
#      - YOUR_DNS_NAME
